# wgsl_preprocessor

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
test_shaders/: bind_group_gen_result.wgsl  conditional_compilation.wgsl  conditional_compilation_processed.wgsl  define_with_spaces.wgsl  define_with_spaces_processed.wgsl  defined.wgsl  definer.wgsl  defines.wgsl  defines_result.wgsl  ifdef.wgsl  ifdef_else.wgsl  ifdef_else_else_branch.wgsl  ifdef_else_else_branch_processed.wgsl  ifdef_else_processed.wgsl  ifdef_from_outside.wgsl  ifdef_included_define.wgsl  ifdef_included_define_processed.wgsl  ifdef_included_definer.wgsl  ifdef_nested.wgsl  ifdef_nested_processed.wgsl  ifdef_no_endif.wgsl  ifdef_processed.wgsl  ifdef_undef.wgsl  ifdef_with_include.wgsl  ifndef.wgsl  ifndef_processed.wgsl  ifndef_undefined.wgsl  ifndef_undefined_processed.wgsl  included.wgsl  included2.wgsl  included_define.wgsl  included_define_processed.wgsl  included_definer.wgsl  includer.wgsl  missing_include.wgsl  multiple_includes.wgsl  multiple_inline_includes.wgsl  nested_include.wgsl  put_array_definition_bools.wgsl  put_array_definition_bools_processed.wgsl  (+13 more)
wgsl_type_derive/: Cargo.toml
wgsl_type_derive/src/: lib.rs
