[package]
name = "wgsl_preprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # TODO versions?
wgpu = "*"
ex = "*"
const_format = "*"
duplicate = "*"
cgmath = { version = "*", optional = true }

[features] # TODO document features in README or wherever featuers are documented
default = []
cgmath_vectors = ["dep:cgmath"]
array_vectors = []
